# atlas-converter

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  annotation_compressor.py  atlas_compressor.py  atlas_manager.py  cli.py  lefthook.yml  main.py  models.py  pinpoint_atlas.py  pyproject.toml
.github/workflows/: code-quality.yml  test.yml
.nix/: flake.nix
tests/: conftest.py  test_atlas_compressor.py  test_atlas_manager.py  test_main.py  test_models.py  test_pinpoint_atlas.py
