[project]
name = "atlas-converter"
version = "5.0.0.dev3"
description = "Tool to convert BrainGlobe formatted atlases into Pinpoint V compatible atlases."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "brainglobe-atlasapi>=2.3.1",
    "fast-simplification>=0.1.13",
    "numpy>=2.5.0",
    "pydantic>=2.13.4",
    "pyrefly>=1.0.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "rich>=15.0.0",
    "ruff>=0.15.16",
    "trimesh>=4.12.2",
    "typer>=0.26.8",
    "zarr>=3.2.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
fix = true

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
preset = "strict"


[dependency-groups]
dev = [
    "lefthook>=2.1.9",
    "pyrefly>=1.1.1",
    "ruff>=0.15.20",
]
